--- a/style.css
+++ b/style.css
@@ -1,18 +1,29 @@
-body{
-    background-image: url(banner\ stillus.png);
+body {
+    background-color: white;
     background-size: 100%;
     background-attachment: fixed;
 }
 
+.div_cabecalho {
+    background-image: linear-gradient(to right, rgb(252, 164, 82), white);
+}
 
-h1{
+h2 {
     text-align: center;
-    font-size: 3em;
+    font-size: 2em;
+    color: white;
+    text-shadow: 1px 1px 2px black;
+}
+
+.image_logo {
+    width: 200px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
 }
 
 
-iframe{
-    border: 2px solid red;
+iframe {
     width: 100%;
     height: 500px;
 }
